Kubernetes/yml/Addon-Function/ingress/nginx/01-tls/tls-echo-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-with-tls
  namespace: web
spec:
  rules:
  - host: tls.echo.example 
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
  tls:
  - hosts:
    - tls.echo.example
    secretName: tls-echo-exmaple-secret
